--- a/experimental_feature_Modeling.ipynb
+++ b/experimental_feature_Modeling.ipynb
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression Basline Model"
+    "## Logistic Regression Baseline Model"
    ]
   },
   {
