--- a/vanilla_model_cleaned.ipynb
+++ b/vanilla_model_cleaned.ipynb
@@ -23,52 +23,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T07:07:53.982332Z",
+     "start_time": "2021-03-11T07:07:53.974402Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Import Packages\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Sklearn Packages\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "import pyforest\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import mean_squared_error, precision_score, confusion_matrix, accuracy_score\n",
-    "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import set_config\n",
-    "set_config(print_changed_only=False)\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.utils.testing import ignore_warnings\n",
-    "from sklearn.exceptions import ConvergenceWarning\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-    "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
-    "\n",
-    "pd.set_option('display.max_columns', 300)\n",
-    "% matplotlib inline\n",
-    "\n",
-    "plt.style.use('seaborn')"
+    "from sklearn.metrics import mean_squared_error, precision_score\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score                      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:56:17.208869Z",
+     "start_time": "2021-01-22T15:56:17.188714Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# # Import Packages\n",
+    "# import pandas as pd\n",
+    "# import seaborn as sns\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# # Sklearn Packages\n",
+    "# from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "# \n",
+    "# \n",
+    "# from sklearn.dummy import DummyClassifier\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "# from imblearn.over_sampling import SMOTE\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
+    "# from sklearn import set_config\n",
+    "# set_config(print_changed_only=False)\n",
+    "# from xgboost import XGBClassifier\n",
+    "# from sklearn.utils.testing import ignore_warnings\n",
+    "# from sklearn.exceptions import ConvergenceWarning\n",
+    "\n",
+    "# import warnings\n",
+    "# warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+    "# warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "# warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
+    "\n",
+    "# pd.set_option('display.max_columns', 300)\n",
+    "# % matplotlib inline\n",
+    "\n",
+    "# plt.style.use('seaborn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:57:22.285336Z",
+     "start_time": "2021-01-22T15:57:22.260207Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# \n",
-    "df = pd.read_csv('../Phase_3_Project/data.csv/fetal_health.csv')\n"
+    "df = pd.read_csv('data.csv/fetal_health.csv')\n"
    ]
   },
   {
@@ -80,8 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:57:23.619276Z",
+     "start_time": "2021-01-22T15:57:23.608871Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df.fetal_health = np.where(df.fetal_health > 1.0, 2.0, df.fetal_health)"
@@ -106,8 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:57:24.198781Z",
+     "start_time": "2021-01-22T15:57:24.182985Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Assigning features variables (X) and target variable (y)\n",
@@ -120,8 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:57:25.301565Z",
+     "start_time": "2021-01-22T15:57:25.297193Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,6 +185,358 @@
    "metadata": {},
    "source": [
     "Our train and test set were split correctly. 75% of the dataset was assigned to our train set, and 25% was assigned to our test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:58:03.341307Z",
+     "start_time": "2021-01-22T15:58:02.849533Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import lazypredict\n",
+    "from lazypredict.Supervised import LazyClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T15:58:08.020904Z",
+     "start_time": "2021-01-22T15:58:04.312114Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [00:03<00:00,  8.19it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Balanced Accuracy</th>\n",
+       "      <th>ROC AUC</th>\n",
+       "      <th>F1 Score</th>\n",
+       "      <th>Time Taken</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LGBMClassifier</th>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BaggingClassifier</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdaBoostClassifier</th>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreesClassifier</th>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVC</th>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelPropagation</th>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelSpreading</th>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearSVC</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CalibratedClassifierCV</th>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NearestCentroid</th>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreeClassifier</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SGDClassifier</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perceptron</th>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearDiscriminantAnalysis</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifier</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifierCV</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GaussianNB</th>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PassiveAggressiveClassifier</th>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BernoulliNB</th>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QuadraticDiscriminantAnalysis</th>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DummyClassifier</th>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CheckingClassifier</th>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Accuracy  Balanced Accuracy  ROC AUC  F1 Score  \\\n",
+       "Model                                                                           \n",
+       "LGBMClassifier                     0.96               0.93     0.93      0.96   \n",
+       "DecisionTreeClassifier             0.92               0.90     0.90      0.93   \n",
+       "BaggingClassifier                  0.95               0.90     0.90      0.94   \n",
+       "RandomForestClassifier             0.95               0.90     0.90      0.95   \n",
+       "AdaBoostClassifier                 0.94               0.90     0.90      0.94   \n",
+       "ExtraTreesClassifier               0.95               0.89     0.89      0.95   \n",
+       "SVC                                0.93               0.89     0.89      0.93   \n",
+       "KNeighborsClassifier               0.94               0.88     0.88      0.94   \n",
+       "LabelPropagation                   0.93               0.88     0.88      0.93   \n",
+       "LabelSpreading                     0.93               0.88     0.88      0.93   \n",
+       "LogisticRegression                 0.92               0.87     0.87      0.92   \n",
+       "LinearSVC                          0.91               0.87     0.87      0.91   \n",
+       "CalibratedClassifierCV             0.92               0.87     0.87      0.91   \n",
+       "NearestCentroid                    0.87               0.86     0.86      0.87   \n",
+       "ExtraTreeClassifier                0.91               0.85     0.85      0.91   \n",
+       "SGDClassifier                      0.91               0.85     0.85      0.91   \n",
+       "Perceptron                         0.88               0.85     0.85      0.88   \n",
+       "LinearDiscriminantAnalysis         0.90               0.83     0.83      0.89   \n",
+       "RidgeClassifier                    0.90               0.83     0.83      0.90   \n",
+       "RidgeClassifierCV                  0.90               0.83     0.83      0.90   \n",
+       "GaussianNB                         0.88               0.81     0.81      0.88   \n",
+       "PassiveAggressiveClassifier        0.86               0.80     0.80      0.86   \n",
+       "BernoulliNB                        0.84               0.80     0.80      0.85   \n",
+       "QuadraticDiscriminantAnalysis      0.87               0.78     0.78      0.86   \n",
+       "DummyClassifier                    0.65               0.51     0.51      0.65   \n",
+       "CheckingClassifier                 0.77               0.50     0.50      0.67   \n",
+       "\n",
+       "                               Time Taken  \n",
+       "Model                                      \n",
+       "LGBMClassifier                       0.92  \n",
+       "DecisionTreeClassifier               0.03  \n",
+       "BaggingClassifier                    0.11  \n",
+       "RandomForestClassifier               0.38  \n",
+       "AdaBoostClassifier                   0.24  \n",
+       "ExtraTreesClassifier                 0.24  \n",
+       "SVC                                  0.10  \n",
+       "KNeighborsClassifier                 0.07  \n",
+       "LabelPropagation                     0.13  \n",
+       "LabelSpreading                       0.18  \n",
+       "LogisticRegression                   0.05  \n",
+       "LinearSVC                            0.10  \n",
+       "CalibratedClassifierCV               0.25  \n",
+       "NearestCentroid                      0.03  \n",
+       "ExtraTreeClassifier                  0.02  \n",
+       "SGDClassifier                        0.04  \n",
+       "Perceptron                           0.02  \n",
+       "LinearDiscriminantAnalysis           0.50  \n",
+       "RidgeClassifier                      0.04  \n",
+       "RidgeClassifierCV                    0.03  \n",
+       "GaussianNB                           0.02  \n",
+       "PassiveAggressiveClassifier          0.02  \n",
+       "BernoulliNB                          0.03  \n",
+       "QuadraticDiscriminantAnalysis        0.02  \n",
+       "DummyClassifier                      0.02  \n",
+       "CheckingClassifier                   0.02  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None)\n",
+    "models,predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
+    "models"
    ]
   },
   {
@@ -1372,6 +1766,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
