--- a/vanilla_model_cleaned.ipynb
+++ b/vanilla_model_cleaned.ipynb
@@ -85,17 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:57:22.285336Z",
-     "start_time": "2021-01-22T15:57:22.260207Z"
+     "end_time": "2021-03-11T07:09:12.729779Z",
+     "start_time": "2021-03-11T07:09:11.426911Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# \n",
-    "df = pd.read_csv('data.csv/fetal_health.csv')\n"
+    "# Importing dataset\n",
+    "df = pd.read_csv('data.csv/fetal_health.csv')"
    ]
   },
   {
@@ -107,14 +122,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:57:23.619276Z",
-     "start_time": "2021-01-22T15:57:23.608871Z"
+     "end_time": "2021-03-11T07:09:36.056155Z",
+     "start_time": "2021-03-11T07:09:36.012428Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df.fetal_health = np.where(df.fetal_health > 1.0, 2.0, df.fetal_health)"
    ]
@@ -138,14 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:57:24.198781Z",
-     "start_time": "2021-01-22T15:57:24.182985Z"
+     "end_time": "2021-03-11T07:09:44.469492Z",
+     "start_time": "2021-03-11T07:09:44.415229Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Assigning features variables (X) and target variable (y)\n",
     "X = df.drop('fetal_health', axis=1)\n",
@@ -157,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:57:25.301565Z",
-     "start_time": "2021-01-22T15:57:25.297193Z"
+     "end_time": "2021-03-11T07:09:46.873283Z",
+     "start_time": "2021-03-11T07:09:46.864420Z"
     }
    },
    "outputs": [
@@ -188,15 +233,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To better understand our dataset and how our features variables affect our target variable, we decided to run baseline models and find what approach we should take when tuning our models. None of the baseline models will have any kinds of hyperparameters tuning. We will use the default hyperparameters.\n",
+    "\n",
+    "<b>Objectives:</b>\n",
+    "- Run a Logistic Regression, KNN, Decision Tree, and Random Forest model.\n",
+    "- Create a function to simplify our model evaluation.\n",
+    "- Evaluate each model using the Accuracy, Recall, F1 Score, and Precision metrics.\n",
+    "- Create confusion matrices for each model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:58:03.341307Z",
-     "start_time": "2021-01-22T15:58:02.849533Z"
+     "end_time": "2021-03-11T07:09:55.178467Z",
+     "start_time": "2021-03-11T07:09:53.341297Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/sklearn/utils/deprecation.py:143: FutureWarning: The sklearn.utils.testing module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.utils. Anything that cannot be imported from sklearn.utils is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import lazypredict\n",
     "from lazypredict.Supervised import LazyClassifier"
@@ -537,26 +611,6 @@
     "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None)\n",
     "models,predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
     "models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Baseline Models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To better understand our dataset and how our features variables affect our target variable, we decided to run baseline models and find what approach we should take when tuning our models. None of the baseline models will have any kinds of hyperparameters tuning. We will use the default hyperparameters.\n",
-    "\n",
-    "<b>Objectives:</b>\n",
-    "- Run a Logistic Regression, KNN, Decision Tree, and Random Forest model.\n",
-    "- Create a function to simplify our model evaluation.\n",
-    "- Evaluate each model using the Accuracy, Recall, F1 Score, and Precision metrics.\n",
-    "- Create confusion matrices for each model."
    ]
   },
   {
